resorted divs to allow bottom white space. fixed width scrolling issue. Made larger content.

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
 .container {
 	margin: 20px auto;
 	width: 100%;
+  box-sizing: border-box;
 }
 
 .row {
@@ -50,6 +51,8 @@ body {
 	padding: 0 20px;
 	width: 100%;
   z-index:-1;
+  box-sizing: border-box;
+
 }
 
 h2 {
@@ -80,8 +83,8 @@ img{
 .aside p, .content p, .aside, .content{
   text-align: center;
 }
-/*.stickem, .aside {
-  padding-bottom: 20%;
+/*.aside {
+  height: 100%;
 }*/
 
 .headshot{
@@ -91,4 +94,7 @@ img{
   -webkit-box-shadow: 0 0 5px rgba(68,68,68,0.8);
   box-shadow: 0 0 5px rgba(68,68,68,0.8);
   overflow: hidden;
+}
+.buffer{
+  height: 300px;
 }
